code cleanup, removing commented code, unused methods, unused imports